working binary-creator

--- a/sections/binary-creator.liquid
+++ b/sections/binary-creator.liquid
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="{{ 'component-rte.css' | asset_url }}" media="print" onload="this.media='all'">
 <link rel="stylesheet" href="{{ 'section-binary-creator.css' | asset_url }}" media="print" onload="this.media='all'">
-<script src="{{ 'binary-creator.js' | asset_url }}" defer="defer"></script>
+<script type='module' src="{{ 'binary-creator.js' | asset_url }}" defer="defer"></script>
 
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -10,14 +10,36 @@
   rel="stylesheet"
 />
 
-<div class="container mx-auto flex flex-col my-8">
-  <input
-    type="text"
-    id="words"
-    name="words"
-    required
-    size="10"
-    class="my-1 block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-1 focus:ring-sky-500 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500"
-  />
-  <div id="tee-container"></div>
+<div class="binary-section container mx-auto flex flex-col my-8" data-controller='binary-creator'>
+    <input
+      data-action='binary-creator#compile'
+      type="text"
+      id="words"
+      name="words"
+      required
+      size="10"
+      class="my-1 block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-1 focus:ring-sky-500 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500"
+      placeholder='What would you like to compile?'
+    />
+  <div class='flex flex-row'>
+    <input
+      data-action='change->binary-creator#setBackgroundColor'
+      type="color"
+      id="background"
+      name="background"
+      required
+      size="10"
+      class="basis-1/2 mx-1 md:w-1/2 my-1 block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-1 focus:ring-sky-500 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500"
+    />
+    <input
+      data-action='change->binary-creator#setFontColor'
+      type="color"
+      id="font-color"
+      name="font-color"
+      required
+      size="10"
+      class="basis-1/2 my-1 block w-full px-3 py-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 focus:outline-none focus:border-sky-500 focus:ring-1 focus:ring-sky-500 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500"
+    />
+  </div>
+  <div id="tee-container" data-binary-creator-target='compiled'></div>
 </div>
