--- a/assets/section-binary-creator.css
+++ b/assets/section-binary-creator.css
@@ -4,3 +4,15 @@
   /* font-family: 'Water Brush', cursive;  */
   text-align: center;
 }
+
+@media only screen and (min-width: 750px) {
+  .binary-section {
+    height: 80vh;
+  }
+}
+
+@media screen and (max-width: 749px) {
+  .binary-section {
+    height: 80vh;
+  }
+}
